--- a/src/App.css
+++ b/src/App.css
@@ -2,87 +2,100 @@
 
 .Homehero > * {
     font-family: 'Montserrat', sans-serif;
-    border: 1px solid red;
-    padding:1rem;
+    padding:1em;
 }
 
 /* Page d'accueil */
+
 .home-container {
     overflow: hidden;
 }
 .Homehero {
-    background-color: rgb(255, 255, 255);
     display:flex;
-    flex-wrap: wrap;
     height: 85vh;
 }
 
 .textside {
     flex: 1;
-    background-color: blueviolet;
     display: grid;
-    grid-template-columns: 2% 49% 49%;
-    grid-template-rows: 7em 5em 5em auto ;
-    gap: 1em 1em;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    align-items: end;
-    justify-items: start;
-}
-.textside > *{
-    border: 1px solid red;
+    grid-template-columns: min-content auto;
+    grid-template-rows: min-content;
+    gap: 5em 2em;
+    padding-left: 2em;
+    padding-top: 17em;
 }
 
 .rectangle {
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, rgba(129, 20, 20, 0) 0%, #000000 100%);
-    grid-row: 2 / 4;
+    width: 12px;
+    height: 13em;
+    background: linear-gradient(360deg, rgba(129, 20, 20, 0) 0%, #000000 100%);
+    grid-row: 1 / 2;
     grid-column: 1 / 2;
 }
 
+.gametitlebox {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    height: min-content;
+}
+
 .ovoLogo {
-    width: 50%;
-    height: auto;
     opacity: 0.6;
-    grid-row: 2 / 3;
-    grid-column: 2 / 4;
+    width: 20em;
+    height: auto;
 }
 
 .description {
+    margin-top: 2em;
     opacity: 0.6;
-    grid-row: 3 / 4;
-    grid-column: 2 / 4;
 }
 
 .playnow {
-    width: 100%;
-    height: 15%;
+
     font-weight: bolder;
     color: white;
     background: linear-gradient(180deg, #B0B0B0 0%, #000000 100%);
     border-radius: 0.7em;
-    grid-row: 4 / 5;
+    grid-row: 2 / 3;
     grid-column: 2 / 3;
-    align-self: flex-start;
+    width: 10em;
+    height: 3em;
+    justify-self: center;
 }
 
 .videoside-content {
     flex: 1;
-    background-color: orange;
-    display: grid;
-    align-items: center;
-    justify-items: end;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .video {
-    width: 95%;
-    border-radius: 6em;
-    border: 4px solid rgb(0, 0, 0);
-    margin-right: -6em;
+    height: auto;
+    width: 100%;
+    max-width: 800px;
 }
 
+@media (max-width: 900px) {
+    .Homehero {
+        flex-direction: column;
+    }
+    .textside, .videoside-content {
+        width: 100%;
+        height: 35%;
+        padding-top: 50px;
+        justify-content: center;
+    }
+    .textside {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 676px) {
+    
+
+}
+    
 
 /* Page GAMES */
 
