--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,6 +7,7 @@
   padding: 0 50px;
   box-sizing: border-box;
   align-items: center;
+  overflow:hidden;
 }
 
 * {
@@ -56,14 +57,10 @@ ul.mobile-menu {
 
 @media screen and (max-width: 900px) {
 
-  .mobile-menu {
-    background-color: white;
-    color: white;
-  }
-
   .BlackhbrgerLogo {
     display: block;
     position: absolute;
+    z-index: 1;
   }
 
   ul {
@@ -71,13 +68,14 @@ ul.mobile-menu {
     left: 0;
     position: absolute;
     background-color: rgb(255, 255, 255);
-    width: 100%;
-    height: 100vh;
+    width: 95%;
+    height: 101%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-left: -110%;
+    z-index: 1;
   }
   
   li {
@@ -89,4 +87,5 @@ ul.mobile-menu {
   .nav-link, .nav-link > * {
     color: #000000;
   }
+
 }
