--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,23 @@
 
 }
     
-
 /* Page GAMES */
+.gamespage {
+    width: 100%;
+    height: 100%;
+}
 
+.video-gamespage {
+    object-fit: cover;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
+.videocontainer {
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
