--- a/src/App.css
+++ b/src/App.css
@@ -99,20 +99,123 @@
 /* Page GAMES */
 .gamespage {
     width: 100%;
-    height: 100%;
+    height: auto;
+    position: relative;
+    display: grid;
 }
 
-.video-gamespage {
+.gamespage > * {
+    box-sizing: border-box;
+    border: 1px solid red;
+}
+
+.gamespage-video {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
-    z-index: -2;
-    width: 100%;
-    height: 100%;
+    object-position: center;
     position: fixed;
 }
 
-.videocontainer {
-    z-index: -1;
+.blacksail {
     width: 100%;
     height: 100%;
     position: fixed;
+    background-color: rgba(0,0,0,0.5)
+}
+
+.gamespage-navbar {
+  display: flex;
+  height: 10vh;
+  justify-content: space-between;
+  padding: 0 50px;
+  box-sizing: border-box;
+  align-items: center;
+  position: relative;
+  z-index: 2;
+}
+
+.gamespage-navbar > * {
+ text-decoration: none;
+ list-style: none;
+ color: white;
+ font-size: medium;
+ font-family: 'Montserrat', sans-serif;
+ margin: 0;
+ border: 0;
+ background-color: rgba(0,0,0,0);
+}
+
+.gamespage-navbar ul {
+  display: flex;
+}
+
+.gamespage-navbar li {
+  margin: 0 100px;
+  font-weight: bold;
+}
+
+.gamespage-navbar li > * {
+    color: white;
+}
+
+.gamespage-navbar .dedra {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: larger;
+  font-weight: bolder;
+}
+
+.gamespage-navbar .dedra-logo {
+  width: 40px;
+  height: auto;
+}
+
+.gamespage-navbar .whiteHbrgerLogo {
+  width: 60px;
+  height: auto;
+  display: none;
+  top: 34px;
+  right: 50px;
+  width: 35px;
+}
+
+.gamespage-navbar ul.mobile-menu {
+  margin-left: 0;
+}
+
+@media screen and (max-width: 900px) {
+
+.gamespage-navbar .whiteHbrgerLogo {
+    display: block;
+  }
+
+.gamespage-navbar  ul {
+    top: 0;
+    left: 0;
+    position: absolute;
+    background-color: rgb(255, 255, 255);
+    width: 95%;
+    height: 101%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: -110%;
+    z-index: 1;
+  }
+  
+.gamespage-navbar  li {
+    margin: 25px 0;
+    font-size: 1.2em;
+    
+  }
+
+.gamespage-navbar  .nav-link, .nav-link > * {
+    color: #000000;
+  }
+
 }
