--- a/src/components/VerticalCarousel.css
+++ b/src/components/VerticalCarousel.css
@@ -32,10 +32,9 @@
   .carousel-inner {
     position: relative;
     height: auto;
-    width: 50%;
+    width: 40%;
     padding: 4em;
-    margin-top: 10%;
-    z-index: 20;
+    margin-top: 12%;
   }
   
   .carousel-inner::before,
@@ -77,6 +76,6 @@
   }
 
   .gamesimages {
-    height: 90px;
-    width: auto;
+    width: 100%;
+    height: 6em;
   }
