--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,38 @@
   margin-left: 0;
 }
 
+#gamesmainpage {
+  width: 100%;
+  height: 100vh;
+  border: 3px solid red;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.gamescontent {
+  flex: 1;
+  border: 3px solid red;
+  display: flex;
+  justify-content: space-between;
+}
+
+.rectangle2 {
+  width: 12px;
+  height: 13em;
+  background: linear-gradient(360deg, rgba(129, 20, 20, 0) 0%, #ffffff 100%);
+}
+
+.description2 {
+  color: white;
+  max-width: 400px;
+  text-align: justify;
+  line-height: 1.6;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 900px) {
 
 .gamespage-navbar .whiteHbrgerLogo {
@@ -217,4 +249,29 @@
     color: #000000;
   }
 
+}
+
+/* BLOG PAGE */
+
+#blogpage {
+  margin: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+#blogpage > * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+#blogpage-container {
+  margin: 0;
+  text-align: center;
+  overflow: hidden;
+  display: flex;
+  width: 100%;
+  height: 90%;
+  justify-content: center;
+  align-items: center;
 }
