--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,6 +8,7 @@
   box-sizing: border-box;
   align-items: center;
   overflow:hidden;
+  z-index: 1;
 }
 
 * {
@@ -42,7 +43,7 @@ li {
   height: auto;
 }
 
-.BlackhbrgerLogo {
+.hbrgerLogo {
   width: 60px;
   height: auto;
   display: none;
@@ -57,19 +58,20 @@ ul.mobile-menu {
 
 @media screen and (max-width: 900px) {
 
-  .BlackhbrgerLogo {
+  .hbrgerLogo {
     display: block;
     position: absolute;
     z-index: 1;
   }
 
   ul {
+    border: 3px solid red;
     top: 0;
     left: 0;
     position: absolute;
-    background-color: rgb(255, 255, 255);
-    width: 95%;
-    height: 101%;
+    background: rgb(255, 255, 255);
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
