--- a/src/App.css
+++ b/src/App.css
@@ -156,6 +156,8 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   width: 20px;
   height: 100px;
   background: linear-gradient(360deg, rgba(129, 20, 20, 0) 0%, #ffffff 100%);
+  margin-top: 8px;
+  animation-duration: 0.7s; 
 }
 
 .description2 {
@@ -165,6 +167,13 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   line-height: 1.6;
   font-weight: bold;
   font-size: larger;
+  animation-duration: 0.7s; 
+}
+
+.carousel {
+  width: 100vw;
+  height: 100%;
+  border: 2px solid red;
 }
 
 @media screen and (max-width: 900px) {
