--- a/src/App.css
+++ b/src/App.css
@@ -162,11 +162,16 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 
 .gamescontent {
   flex: 1;
-  width: 30%;
-  min-width: 460px;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  flex-direction: column;
+  min-width: 460px;
+  row-gap: 3em;
+  border: 1px solid red;
+}
+
+.gametext {
+  display: flex;
+  flex-direction: row;
   gap: 24px;
 }
 
@@ -186,6 +191,15 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   font-weight: bold;
   font-size: larger;
   animation-duration: 0.7s; 
+}
+
+.gamebuttons {
+  background-color: black;
+  color: white;
+  width: 192px;
+  height: 54px;
+  border-radius: 7px;
+  margin: 0 15px;
 }
 
 .carousel {
@@ -238,7 +252,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 /* ABOUT PAGE */
 
 .aboutpage {
-  border: 1px solid red;
   width: 100vw;
   height: 100%;
   background: -moz-linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
@@ -252,7 +265,8 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 }
 
 .slogancontainer h1 {
-  font-size: 1.5em;
+  font-size:
+   1.5em;
 }
 .slogancontainer {
   width: 100vw;
@@ -272,11 +286,10 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 .historycontainer {
   width: 100vw;
   height: 100vh;
-  border: 1px solid rgb(0, 0, 0);
-  height: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: end;
+  gap:12%;
 }
 
 .quisommesnous  {
@@ -292,7 +305,8 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 .teamcontainer {
   width: 100vw;
   height: 100vh;
-  border: 1px solid rgb(0, 0, 0);
+  display: flex;
+  justify-content: center;
 }
 
 
