structure html connect page

--- a/src/App.css
+++ b/src/App.css
@@ -166,7 +166,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   flex-direction: column;
   min-width: 460px;
   row-gap: 3em;
-  border: 1px solid red;
 }
 
 .gametext {
@@ -193,19 +192,13 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   animation-duration: 0.7s; 
 }
 
-.gamebuttons {
-  background-color: black;
-  color: white;
-  width: 192px;
-  height: 54px;
-  border-radius: 7px;
-  margin: 0 15px;
+.partnerslogo {
+  height: 6em;
 }
 
 .carousel {
   width: 100vw;
   height: 100%;
-  border: 2px solid red;
 }
 
 @media screen and (max-width: 900px) {
@@ -257,7 +250,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   background: -moz-linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
   background: -webkit-linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
   background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
-
 }
 
 .aboutpage > * {
@@ -306,9 +298,16 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   width: 100vw;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  row-gap: 14em;
 }
 
+.teammembers {
+  display: flex;
+  gap: 7em;
+}
 
 /* CONNECT PAGE */
 
@@ -318,4 +317,16 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   background: -moz-linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
 background: -webkit-linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
 background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
+}
+
+.sm-container {
+  width: 100vw;
+  height: 100vh;
+  border: 1px solid red;
+}
+
+.socialmedias2 {
+  width: 90px;
+  height: auto;
+  border: 0;
 }
