--- a/src/App.css
+++ b/src/App.css
@@ -322,16 +322,21 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 
 .connectpage {
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   border: 1px solid rgb(0, 255, 8);
   background: -moz-linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
   background: -webkit-linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
   background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
 }
 
+.connectmainpage {
+  display:flex;
+  height: auto;
+}
+
 .sm-container {
   width: 100%;
-  height: 100vh;
+  height: auto;
   border: 1px solid red;
   display: flex;
   flex-direction: column;
@@ -343,16 +348,16 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 .sm-container h1 {
   font-size: 40px;
   border: 1px solid red;
+  margin-right: 1%;
 }
 
 .socialmedias2 {
   flex: 1;
   width: auto;
-  border: 0;
   display: grid;
   grid-template-rows: repeat(3, auto);
-  gap: 20px;
   border: 1px solid red;
+  margin-right: 7%;
 }
 
 svg {
@@ -360,25 +365,26 @@ svg {
   height: auto;
 }
 
-.bi-youtube:hover path{
-  fill: #FF0000;
-}
+path { transition: fill .4s ease; }
 
-.bi-discord:hover path{
-  fill: #7289da ;
-}
+.bi-youtube path, .bi-discord path, .bi-twitter path{ fill: rgba(0,0,0,0.5); }
 
-.bi-twitter:hover path{
-  fill: #1DA1F2;
-}
+.bi-youtube:hover path{ fill: #FF0000; }
+
+.bi-discord:hover path{ fill: #7289da ; }
+
+.bi-twitter:hover path{  fill: #1DA1F2; }
+
+
 
 .formcontainer {
-  flex: 4;
+  flex: 3;
+  border: 1px solid rgb(0, 21, 255);
 }
 
 
 @media screen and (max-width: 900px) {
 
-  .connectpage { height: 100vh; }
+  .connectmainpage { flex-direction: column; }
 
 }
