--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -30,6 +30,31 @@ li {
   font-weight: bold;
 }
 
+.nav-link { line-height: 30px }
+
+li.different{
+  border:none;
+  position: relative;
+}
+li.different:hover{
+  border: none;
+}
+
+.different::after{
+  content: '';
+  position: absolute;
+  width: 0px;
+  height: 3px;
+  left: 50%;
+  bottom:0;
+  background-color: rgb(0, 0, 0);
+  transition: all ease-in-out .2s;
+}
+.different:hover::after{
+  width: 100%;
+  left: 0;
+}
+
 .dedra {
   display: flex;
   align-items: center;
@@ -51,11 +76,6 @@ li {
   right: 50px;
   width: 35px;
 }
-
-.nav-link:hover {
-  color: #898989;
-}
-
 
 ul.mobile-menu {
   margin-left: 0;
