start form component onclick

--- a/src/App.css
+++ b/src/App.css
@@ -331,33 +331,26 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 
 .connectmainpage {
   display:flex;
+  flex-direction: column;
   height: auto;
 }
 
 .sm-container {
   width: 100%;
-  height: auto;
-  border: 1px solid red;
+  height: 25em;
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-start;
-  padding-top:3%;
-  row-gap: 5%;
+  align-items: center;
+  justify-content: center;
+  column-gap: 5em;
 }
 .sm-container h1 {
   font-size: 40px;
-  border: 1px solid red;
-  margin-right: 1%;
 }
 
 .socialmedias2 {
-  flex: 1;
   width: auto;
   display: grid;
-  grid-template-rows: repeat(3, auto);
-  border: 1px solid red;
-  margin-right: 7%;
+  grid-template-columns: repeat(3, 10em);
 }
 
 svg {
@@ -378,7 +371,6 @@ path { transition: fill .4s ease; }
 
 
 .formcontainer {
-  flex: 3;
   border: 1px solid rgb(0, 21, 255);
 }
 
