--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
 
 * {
     box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    border: 0;
 }
 
 /* Page d'accueil */
@@ -266,7 +269,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 .slogancontainer {
   width: 100vw;
   height: 100vh;
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
   align-items:center;
@@ -323,7 +325,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 .connectpage {
   width: 100vw;
   height: 100vh;
-  border: 1px solid rgb(0, 255, 8);
   background: -moz-linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
   background: -webkit-linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
   background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1) 100%);
@@ -333,15 +334,17 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   display:flex;
   flex-direction: column;
   height: auto;
+  border: 1px solid red;
 }
 
 .sm-container {
   width: 100%;
-  height: 25em;
+  height: 6em;
   display: flex;
   align-items: center;
   justify-content: center;
   column-gap: 5em;
+  border: 1px solid red;
 }
 .sm-container h1 {
   font-size: 40px;
