--- a/src/components/emailus.css
+++ b/src/components/emailus.css
@@ -1,4 +1,6 @@
 
+/* btn styles*/ 
+
 .buttton-wrapper a {
 	position: absolute;
 	top: 50%;
@@ -64,4 +66,75 @@ a:hover span::before,
 a:hover span::after  {
 	width: calc( 180px / 2);
 	height: calc( 50px / 2);
+}
+
+/* form styles*/ 
+
+.form-style-9 {
+	background: transparent;
+	margin: 50px auto;
+	width: 50%;
+	height: min-content;
+	display: none;
+	border: 1px solid red;
+	z-index: 3;
+}
+.form-style-9 .form-list{
+	padding:0;
+	margin:0;
+	list-style:none;
+}
+.form-style-9 .form-list li{
+	display: block;
+	margin-bottom: 10px;
+	min-height: 45px;
+}
+.form-style-9 .form-list li  .field-style{
+	box-sizing: border-box; 
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box; 
+	padding: 8px;
+	outline: none;
+	background: transparent;
+	border-bottom: 2px solid #000000;
+	-webkit-transition: all 0.30s ease-in-out;
+	-moz-transition: all 0.30s ease-in-out;
+	-ms-transition: all 0.30s ease-in-out;
+	-o-transition: all 0.30s ease-in-out;
+
+}.form-style-9 .form-list li  .field-style:focus{
+	box-shadow: 0 0 5px #e0e0e0;
+	border:1px solid #e0e0e0;
+}
+.form-style-9 .form-list li .field-split{
+	width: 49%;
+}
+.form-style-9 .form-list li .field-full{
+	width: 100%;
+}
+.form-style-9 .form-list li input.align-left{
+	float:left;
+}
+.form-style-9 .form-list li input.align-right{
+	float:right;
+}
+.form-style-9 .form-list li textarea{
+	width: 100%;
+	height: 100px;
+}
+.form-style-9 .form-list li input[type="button"], 
+.form-style-9 .form-list li input[type="submit"] {
+	background: transparent;
+	display: inline-block;
+	cursor: pointer;
+	color: #000000;
+	border: 1px solid black;
+	padding: 8px 18px;
+	text-decoration: none;
+	font: 12px Arial, Helvetica, sans-serif;
+}
+.form-style-9 ul li input[type="button"]:hover, 
+.form-style-9 ul li input[type="submit"]:hover {
+	background-color: #000000;
+	color: white;
 }
