--- a/src/components/emailus.css
+++ b/src/components/emailus.css
@@ -1,9 +1,12 @@
 
 /* btn styles*/ 
+.email-us { 
+	margin-right: 1em ;
+	width: 100vw;
+}
 
 .buttton-wrapper a {
 	position: absolute;
-	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	text-transform: uppercase;
@@ -12,8 +15,10 @@
 	/* line-height: 2; */
 	color: rgb(0, 0, 0);
 	font-size: 30px;
-  font-weight: 900;
-  padding: 6.5px;
+  	font-weight: 900;
+  	padding: 6.5px;
+  	margin-left: -0.5em ;
+  	z-index: 2;
 }
 
 .buttton-wrapper a:active {
@@ -72,13 +77,14 @@ a:hover span::after  {
 
 .form-style-9 {
 	background: transparent;
-	margin: 50px auto;
-	width: 50%;
+	margin: -10px auto;
+	padding-right: 50px ;
 	height: min-content;
+	z-index: 1;
 	display: none;
-	border: 1px solid red;
-	z-index: 3;
+	width: 700px;
 }
+
 .form-style-9 .form-list{
 	padding:0;
 	margin:0;
@@ -86,8 +92,8 @@ a:hover span::after  {
 }
 .form-style-9 .form-list li{
 	display: block;
-	margin-bottom: 10px;
-	min-height: 45px;
+	min-height: min-content;
+	margin-top: 10px;
 }
 .form-style-9 .form-list li  .field-style{
 	box-sizing: border-box; 
@@ -108,9 +114,11 @@ a:hover span::after  {
 }
 .form-style-9 .form-list li .field-split{
 	width: 49%;
+	margin-top: 10px;
 }
 .form-style-9 .form-list li .field-full{
 	width: 100%;
+	margin-top: 10px;
 }
 .form-style-9 .form-list li input.align-left{
 	float:left;
@@ -125,16 +133,22 @@ a:hover span::after  {
 .form-style-9 .form-list li input[type="button"], 
 .form-style-9 .form-list li input[type="submit"] {
 	background: transparent;
-	display: inline-block;
 	cursor: pointer;
 	color: #000000;
 	border: 1px solid black;
 	padding: 8px 18px;
 	text-decoration: none;
 	font: 12px Arial, Helvetica, sans-serif;
+	margin: 0;
 }
 .form-style-9 ul li input[type="button"]:hover, 
 .form-style-9 ul li input[type="submit"]:hover {
 	background-color: #000000;
 	color: white;
 }
+
+@media screen and (max-width: 900px) {
+
+	.form-style-9 { width: 78%; }
+  
+  }
