--- a/src/App.css
+++ b/src/App.css
@@ -334,7 +334,7 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   display:flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 6em;
+  padding-top: 9em;
   height: 90vh;
   width: 100vw;
 }
@@ -345,8 +345,8 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  row-gap: 2em;
+  justify-content: space-between;
+  row-gap: 3em;
 }
 .sm-container h1 {
   font-size: 40px;
