--- a/src/App.css
+++ b/src/App.css
@@ -334,9 +334,11 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   display:flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
   padding-top: 9em;
   height: 90vh;
   width: 100vw;
+  gap: 25vh;
 }
 
 .sm-container {
@@ -374,6 +376,14 @@ path { transition: fill .4s ease; }
 
 .bi-twitter:hover path{  fill: #1DA1F2; }
 
+.extra-info {
+ padding-bottom: 1em;
+}
+
+.extra-info > * {
+  color: black;
+  padding: 0 25px;
+}
 
 
 .formcontainer {
@@ -385,4 +395,48 @@ path { transition: fill .4s ease; }
 
   .connectmainpage { flex-direction: column; }
 
+}
+
+/* PRIVACY POLICY PAGE */
+
+.Privacypage > h1{
+  text-align: center;
+  line-height: 15vh;
+  color: lightgray;
+  background-color: black;
+}
+
+#faq-intro {
+padding: 25px;
+}
+
+
+#main-doc {
+  position: relative;
+  margin: 60px 0 0 25vw;
+  padding: 0 30px;
+  border: 1px solid red;
+}
+
+#faq-navbar {
+  border: 1px solid blue;
+  opacity: .85;
+  position: absolute;
+  left: 0;
+  margin: 0;
+  height: 100vh;
+  width: 200px;
+  z-index: 100;
+  transition: opacity .5s;
+}
+
+
+
+/* TERMS OF SERVICE PAGE */
+
+.tos-page > h1 {
+  text-align: center;
+  line-height: 15vh;
+  color: lightgray;
+  background-color: black;
 }
