--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 * {
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
     margin: 0;
     border: 0;
 }
@@ -26,9 +27,16 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   animation-duration: 2s;
 }
 
+.wh-navbar .wh-dedra-logo {
+  animation: wobble;
+  animation-duration: 0.8s;
+}
+
+
 .Homehero {
     display:flex;
     height: 85vh;
+    align-items: center;
 }
 
 .textside {
@@ -37,8 +45,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
     grid-template-columns: min-content auto;
     grid-template-rows: min-content;
     gap: 5em 2em;
-    padding-left: 2em;
-    padding-top: 12em;
     animation: fadeInLeft; /* referring directly to the animation's @keyframe declaration */
     animation-duration: 0.7s; /* don't forget to set a duration! */
 }
@@ -82,7 +88,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 }
 
 .videoside-content {
-  padding-top: 1.5em;
     flex: 1;
     width: 100%;
     display: flex;
@@ -115,7 +120,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
     }
 }
 
-    
 /* Page GAMES */
 .gamespage {
   height: 100vh;
@@ -168,14 +172,16 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 .gamescontent {
   flex: 1;
   display: flex;
+  align-items: center;
   flex-direction: column;
-  min-width: 460px;
-  row-gap: 3em;
+  min-width: 460px;  
+  margin: 0;
 }
 
 .gametext {
   display: flex;
-  flex-direction: row;
+  justify-content: flex-start;
+  flex-direction: row-reverse;
   gap: 24px;
 }
 
@@ -189,16 +195,16 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 
 .description2 {
   color: white;
-  max-width: 400px;
+  max-width: 450px;
   text-align: justify;
   line-height: 1.6;
-  font-weight: bold;
-  font-size: larger;
+  font-weight: 500;
+  font-size: 22px; 
   animation-duration: 0.7s; 
 }
 
 .partnerslogo {
-  height: 6em;
+  height: 4.5em;
 }
 
 .carousel {
@@ -360,7 +366,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
 
 @media screen and (max-width: 900px) {
 
-  
 }
 
 
@@ -379,7 +384,6 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  padding-top: 9em;
   height: 90vh;
   width: 100vw;
   gap: 25vh;
@@ -403,6 +407,18 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   width: auto;
   display: grid;
   grid-template-columns: repeat(3, 9em);
+  animation: backInLeft;
+  animation-duration: 1s;
+}
+
+.stay-connected {
+  animation: backInRight;
+  animation-duration: 1s;
+}
+
+.extra-info { 
+  animation: backInUp;
+  animation-duration: 3s;
 }
 
 svg {
@@ -456,19 +472,22 @@ padding: 25px;
 
 .faq-container {
   border: 1px solid greenyellow;
+  width: 100%;
+  display: flex;
 }
 
-
 #main-doc {
-  position: relative;
   margin: 60px 0 0 24vw;
   padding: 0 30px;
   border: 1px solid red;
+  display: flex;
+  flex-direction: column;
 }
 
 #faq-navbar {
   border: 1px solid blue;
-  width: 24vw;
+  overflow: auto;
+  position: sticky;
 }
 
 
