--- a/src/components/VerticalCarousel.css
+++ b/src/components/VerticalCarousel.css
@@ -30,14 +30,12 @@
   }
   
   .carousel-inner {
-    flex: 2;
+    flex: 1;
     position: relative;
-    height: 100%;
-    width: 50%;
-    padding: 4em;
-    top: 35vh;
     animation: fadeInLeft; /* referring directly to the animation's @keyframe declaration */
-    animation-duration: 0.7s; /* don't forget to set a duration! */
+    animation-duration: 0.7s;
+    margin-bottom: 10em;
+    margin-left: 2em; /* don't forget to set a duration! */
   }
   
   .carousel-inner::before,
@@ -63,24 +61,27 @@
   .carousel-item {
     position: absolute;
     background: none;
-    border: none;
     padding: 0;
     margin: 0;
     opacity: 0;
     transition: transform 0.4s ease, opacity 0.4s ease;
+    width: auto;
+    height: max-content;
   }
   
   .carousel-item.visible {
     opacity: 1;
+    height: max-content;
   }
   
   .carousel-item.visible:not(.active) {
     opacity: 0.4;
+    width: auto;
   }
 
   .gamesimages {
-    width: 100%;
-    height: 6em;
+    width: auto;
+    height: 4em;
   }
 
   @media screen and (max-width: 900px) {
