--- a/src/components/VerticalCarousel.css
+++ b/src/components/VerticalCarousel.css
@@ -89,7 +89,15 @@
     .carousel-inner {
       display: flex;
       justify-content: center;
+      align-items: flex-end;
       text-align:start;
       width: 100%;
+      margin: 0;
     }
+
+    .gamesimages {
+      width: auto;
+      height: 3em;
+    }
+
   }
