--- a/src/App.css
+++ b/src/App.css
@@ -413,7 +413,7 @@ background: linear-gradient(270deg, rgba(255,255,255,1) 31%, rgba(221,221,221,1)
   animation-duration: 1s;
 }
 
-.stay-connected {
+.stay-connected, .buttton-wrapper {
   animation: backInRight;
   animation-duration: 1s;
 }
@@ -465,9 +465,10 @@ path { transition: fill .4s ease; }
 
 #faq-intro {
 padding: 25px;
+text-align: justify;
 }
 
-.faq-container {
+/* .faq-container {
   border: 1px solid greenyellow;
   width: 100%;
   display: flex;
@@ -485,8 +486,90 @@ padding: 25px;
   border: 1px solid blue;
   overflow: auto;
   position: sticky;
+} */
+
+#doc-container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between
 }
 
+#pp-navbar {
+  position: sticky;
+  top: 0;
+  right: 0;
+  left:0;
+  bottom: 0;
+  background: hwb(201 42% 7%);
+  border: 1px solid black;
+  height: 100vh;
+}
+
+#pp-navbar header {
+  text-align: center;
+  padding: 28px 0;
+  padding: 3vw 15vh;
+}
+
+.pp-nav-link {
+  display: block;
+  text-decoration: none;
+  padding: 12px 16px;
+  border: 1px solid black;
+  border-bottom: 0;
+  border-right: 0;
+  color: black;
+  text-decoration: underline;
+  padding: 2vw vh;
+}
+
+#main-doc {
+  padding: 30px 5vw 30px 5vw;
+  border-top: 1px solid black;
+  text-align: justify;
+}
+
+.main-section p {
+  padding: 15px 20px;
+  font-size: 14px;
+}
+
+.main-section ul {
+  margin-left: 40px;
+  font-size: 14px;
+  list-style-position: inside;
+  padding-right: 20px;
+}
+
+.graybox {
+  width: auto;
+  background: #f5dbce;
+  margin: 15px 40px;
+  padding: 15px;
+  overflow: scroll;
+}
+
+@media (max-width: 900px) {
+  #pp-navbar {
+    position: relative;
+    height: 250px;
+    width: 100%;
+    overflow: scroll;
+    border-bottom: 2px solid gray;
+  }
+  .pp-nav-link {
+    text-align: center;
+    padding: 6px;
+  }
+  #main-doc {
+    margin: auto;
+    padding: 20px;
+  }
+
+  #doc-container {
+    flex-direction: column;
+  }
+}
 
 
 /* TERMS OF SERVICE PAGE */
